src/main/java/org/example/errors/InvalidDateRangeException.java
package org.example.errors;

public class InvalidDateRangeException extends RuntimeException {
    public InvalidDateRangeException(String message) {
        super(message);
    }
}
